--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,12 @@ input[type="zip"]{
 #title-newsletter{
     color: #2f3b47;
     padding-bottom: 20px;
+    font-size: 1.3em;
+}
+
+#form-title{
+    font-size: 1.3em;
+    padding-bottom: 10px;
 }
 
 .interest-bottom{
@@ -167,8 +173,11 @@ select:focus{
     transition: padding 0.3s;
 }
 
-@media (min-width: 760px){
+fieldset{
+    border: none;
+}
 
+@media (min-width: 768px){
     
     .col{
         display: flex;
